nvidia-dcgm-exporter-prom-grafana/dcgm-exporter_nodeaffinity.yaml
# Copyright (c) 2020, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Pod
metadata:
  name: "dcgm-exporter-pod"
  labels:
    app.kubernetes.io/name: "dcgm-exporter"
    app.kubernetes.io/version: "2.0.0-rc.12"
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - klabmaster01
  containers:
  - image: "nvidia/dcgm-exporter:1.7.2"
    imagePullPolicy: Always
    name: "dcgm-exporter"
    resources:
      limits:
        nvidia.com/gpu: 0
      requests:
        nvidia.com/gpu: 0
    ports:
    - name: "metrics"
      containerPort: 9400
    securityContext:
      runAsNonRoot: false
      runAsUser: 0
    volumeMounts:
    - name: "pod-gpu-resources"
      readOnly: true
      mountPath: "/var/lib/kubelet/pod-resources"
  volumes:
  - name: "pod-gpu-resources"
    hostPath:
      path: "/var/lib/kubelet/pod-resources"

---
kind: Service
apiVersion: v1
metadata:
  name: "dcgm-exporter-service"
  labels:
    app.kubernetes.io/name: "dcgm-exporter"
    app.kubernetes.io/version: "2.0.0-rc.12"
spec:
  selector:
    app.kubernetes.io/name: "dcgm-exporter"
    app.kubernetes.io/version: "2.0.0-rc.12"
  ports:
  - name: "metrics"
    port: 9400
